src/test/ui/impl-trait/issue-55872-3.stderr
error[E0277]: the trait bound `impl Future<Output = [async output]>: Copy` is not satisfied
  --> $DIR/issue-55872-3.rs:16:9
   |
LL |         async {}
   |         ^^^^^^^^ the trait `Copy` is not implemented for `impl Future<Output = [async output]>`

error: could not find defining uses
  --> $DIR/issue-55872-3.rs:13:14
   |
LL |     type E = impl std::marker::Copy;
   |              ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
